cowdancer (0.40) UNRELEASED; urgency=low

  * Bug fix: "cowdancer: Should remove base directory when failed to
    create it", thanks to Nelson A. de Oliveira (Closes: #440651).
  * cow-shell: if COWDANCER_REUSE is not set, remove .ilist file after use.

 -- Junichi Uekawa <dancer@debian.org>  Tue, 04 Sep 2007 10:20:28 +0900

cowdancer (0.39) unstable; urgency=low

  * Bug fix: "qemubuilder: Problem when non-US locale", thanks to
    Jean-Baptiste Note (Closes: #440558).
  * Give fd0 directly to qemu to allow tty control.
  * Handle exit codes.
  * apply patch to more easily handle newer architecture support, 
    thanks to Jean-Baptiste Note: #440555

 -- Junichi Uekawa <dancer@debian.org>  Tue, 04 Sep 2007 08:31:55 +0900

cowdancer (0.38) unstable; urgency=low

  [ Jan-Marek Glogowski ] 
  * Don't clean the environment when invoking dumpconfig 
  (closes: #431993)
  * Better error handling when loading config

  [ Junichi Uekawa ]
  * add aptitude into chroot for pbuilder-satisfydepends-aptitude.
  * add cowdancer-ilistcreate command, which creates ilist file.
  * add cowdancer-ilistdump command, for debugging purposes. It was
    included in the testsuite, but it is generally useful for
    troubleshooting.
  * run cowdancer-ilistcreate within chroot if it exists
  - Bug fix: "cowbuilder cross-arch building support."
    (Closes: #432573).

 -- Junichi Uekawa <dancer@debian.org>  Sat, 01 Sep 2007 13:10:45 +0900

cowdancer (0.37) unstable; urgency=low

  * Trying to fix: "tar segfaulting within cowbuilder chroot", thanks to Michael
    Ablassmeier (closes: #430636).
  - work around glibc bug on dlvsym/dlerror failure case.
  * close mmap fd after use.
  
 -- Junichi Uekawa <dancer@debian.org>  Wed, 27 Jun 2007 07:12:20 +0900

cowdancer (0.36) unstable; urgency=low

  * fix logic for running amd64 on i386.
  * add example for cowbuilder manpage.
  * add --dumpconfig option.
  * Bug fix: "cowbuilder ignores BUILDPLACE", thanks to Guido Guenther