@@ -116,6 +116,7 @@ sys     0m3.792s
 #include <stdio.h>
 #include <stdlib.h>
 #include <sys/stat.h>
+#include <sys/types.h>
 #include <string.h>
 #include <unistd.h>
 #include "parameter.h"
