@@ -6,6 +6,7 @@
 #define _GNU_SOURCE
 #include <stdio.h>
 #include <sys/stat.h>
+#include <sys/types.h>
 #include "ilist.h"
 const char* ilist_PRGNAME="cowdancer-ilistdump";
 
