@@ -6,6 +6,8 @@
  */
 #include <stdlib.h>
 #include <stdio.h>
+#include <sys/types.h>
+#include <sys/stat.h>
 #include "ilist.h"
 
 /* I will die when things get too wrong. */
