@@ -3,8 +3,10 @@ cowdancer (0.40) UNRELEASED; urgency=low
   * Bug fix: "cowdancer: Should remove base directory when failed to
     create it", thanks to Nelson A. de Oliveira (Closes: #440651).
   * cow-shell: if COWDANCER_REUSE is not set, remove .ilist file after use.
+  * Bug fix: "cowdancer: <sys/types.h> needed in cowdancer-ilistcreate.c
+    for Etch backport", thanks to Sven Hartge (Closes: #440879).
 
- -- Junichi Uekawa <dancer@debian.org>  Tue, 04 Sep 2007 10:20:28 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Wed, 05 Sep 2007 18:03:11 +0900
 
 cowdancer (0.39) unstable; urgency=low
 
